k8s/overlays/prod/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcoreops-app
spec:
  template:
    spec:
      containers:
        - name: app
