k8s/overlays/prod/ingress-tls.yaml
# NOTE: For local testing, using 'localhost' as the domain. Replace with your domain or public IP for production.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcoreops-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - localhost
      secretName: staging-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcoreops-app
                port:
                  number: 80
